<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>akros2_base</name>
  <version>0.0.0</version>
  <description>AKROS2 base files for drivers, sensors, filters and fusion</description>
  <maintainer email="adityakamath@live.com">Aditya Kamath</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>akros2_msgs</depend>

  <depend>akros2_teleop</depend>

  <depend>laser_filters</depend>
  <depend>ldlidar</depend>

  <depend>v4l2_camera</depend>
  <depend>image_transport_plugins</depend>

  <depend>micro_ros_agent</depend>

  <depend>imu_tools</depend>
  <depend>imu_filter_madgwick</depend>
  <depend>robot_localization</depend>
    
  <depend>tof_imager_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
